# sticker-maker

./: .gitignore  .gitlab-ci.yml  README.md  pubspec.yaml
android/: .rescache
android/app/: build.gradle
android/gradle/: .rescache
android/gradle/wrapper/: .rescache
assets/json/: data_pack_sticker.json
image_processing_lib/: .metadata  README.md  pubspec.yaml
image_processing_lib/android/: CMakeLists.txt  build.gradle
image_processing_lib/android/src/main/: AndroidManifest.xml
image_processing_lib/android/src/main/kotlin/com/example/image_processing/: ImageProcessingPlugin.kt
image_processing_lib/include/opencv2/: opencv_modules.hpp
image_processing_lib/ios/: image_processing.podspec
image_processing_lib/ios/Classes/: ImageProcessingPlugin.swift  bgRemoval.cpp  bgRemoval.hpp  bitmap.cpp  net.cpp  net.hpp
image_processing_lib/lib/: image_processing.dart  image_processing_method_channel.dart  image_processing_platform_interface.dart
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app_observer.dart  main.dart
lib/l10n/: app_en.arb  app_fr.arb  app_vi.arb  l10n.dart
lib/src/api_controller/: api_controller.dart
lib/src/bloc/: BlocObserver.dart
lib/src/cubit/: cubit_index.dart
lib/src/utils/: app_navigate.dart  color.dart  painter.dart  rm_ffi.dart  spacing.dart  style.dart  utils_index.dart  values.dart
lib/src/views/: splash_screen.dart  views_index.dart
lib/src/widgets/: app_widget.dart  curved_navigation_bar.dart  icon_button.dart  image.dart  nav_custom_painter.dart  (+1 more)
test/: widget_test.dart
(+88 files in other folders)
